# SGC

./: .gitignore  01_build_sunglasses_parquet.py  02_plot_dataset_pie.py  README.md  demo_sgc.py  pyproject.toml
sgc/: __init__.py  data.py  model.py  pipeline.py
